clusters/uksrc-ral-stage-cluster/blackbox-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-blackbox-exporter
  namespace: monitoring-system
  labels:
    app: blackbox-exporter
spec:
  ports:
  - name: http
    port: 9115
    targetPort: 9115
  selector:
    app: blackbox-exporter
